fix: update margin on all headings and paragraphs so it looks better on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ nav a:hover {
 .info-txt {
   flex-grow: 1;
   flex-basis: calc(50% - 22px);
-  margin-inline: 50px;
+  margin-inline: 20px;
   margin-block: 30px;
   min-width: 300px;
 }
@@ -230,7 +230,7 @@ nav a:hover {
 .video-content h2 {
   font-family: 'Lato', sans-serif;
   font-weight: 900;
-  margin-inline: 50px;
+  margin-inline: 20px;
   margin-block: 30px;
   padding: 30px 0;
 }
@@ -263,7 +263,7 @@ nav a:hover {
   font-family: 'Lato', sans-serif;
   font-weight: 900;
   color: white;
-  margin-inline: 50px;
+  margin-inline: 20px;
   padding-top: 30px;
 }
 
@@ -271,7 +271,7 @@ nav a:hover {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   color: white;
-  margin-inline: 50px;
+  margin-inline: 20px;
   padding: 30px 0;
 }
 
